Fix remove button z-index

--- a/imports/ui/stylesheets/home.css
+++ b/imports/ui/stylesheets/home.css
@@ -85,6 +85,7 @@
     color: #eee;
     top: 5px;
     right: 5px;
+    z-index: 2000;
 }
 .hall-card-remove:hover {
     color: red
